Laboratory with step 1 added

--- a/lab-python-error-handling.ipynb
+++ b/lab-python-error-handling.ipynb
@@ -75,6 +75,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "da597fad-a0d3-49b5-9e55-951efa7b25ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "######\n",
+    "products=[\"t-shirt\", \"mug\", \"hat\", \"book\", \"keychain\"]\n",
+    "def initialize_inventory(products):\n",
+    "    inventory={product: int(input(f\"quantity of {product}:\")) for product in products}\n",
+    "    return inventory\n",
+    "#initialize_inventory(products)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "8465b3be-559e-4ee1-9322-6c550dd66de8",
    "metadata": {},
@@ -83,7 +98,19 @@
     "#1\n",
     "products=[\"t-shirt\", \"mug\", \"hat\", \"book\", \"keychain\"]\n",
     "def initialize_inventory(products):\n",
-    "    inventory={product: int(input(f\"quantity of {product}:\")) for product in products}\n",
+    "    inventory = {}\n",
+    "    for product in products:\n",
+    "        valid_input = False\n",
+    "        while not valid_input:\n",
+    "            try:\n",
+    "                quantity = int(input(f\"Enter the quantity of {product}s available: \"))\n",
+    "                if quantity >= 0:\n",
+    "                    inventory[product] = quantity\n",
+    "                    valid_input = True\n",
+    "                else:\n",
+    "                    print(\"Quantity cannot be negative. Please enter a valid quantity.\")\n",
+    "            except ValueError:\n",
+    "                print(\"Invalid input. Please enter a valid quantity.\")\n",
     "    return inventory\n",
     "#initialize_inventory(products)"
    ]
@@ -130,15 +157,16 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "quantity of t-shirt: 5\n",
-      "quantity of mug: 5\n",
-      "quantity of hat: 5\n",
-      "quantity of book: 5\n",
-      "quantity of keychain: 5\n",
+      "Enter the quantity of t-shirts available:  5\n",
+      "Enter the quantity of mugs available:  5\n",
+      "Enter the quantity of hats available:  5\n",
+      "Enter the quantity of books available:  5\n",
+      "Enter the quantity of keychains available:  5\n",
       "number of orders: 2\n",
-      "add a product from the list ['t-shirt', 'mug', 'hat', 'book', 'keychain']: mug\n",
+      "add a product from the list ['t-shirt', 'mug', 'hat', 'book', 'keychain']: book\n",
       "add a product from the list ['t-shirt', 'mug', 'hat', 'book', 'keychain']: hat\n",
-      "enter a price for hat: -1\n"
+      "enter a price for book: 5\n",
+      "enter a price for hat: '2\n"
      ]
     },
     {
@@ -152,8 +180,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "enter a price for hat: 1\n",
-      "enter a price for mug: a\n"
+      "enter a price for hat: '1\n"
      ]
     },
     {
@@ -167,27 +194,13 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "enter a price for mug: -6\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "invalid input\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "enter a price for mug: 2\n"
+      "enter a price for hat: 1\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'total price is 3'"
+       "'total price is 6'"
       ]
      },
      "execution_count": 3,
